--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -8,7 +8,7 @@ http://open-evse.googlecode.com/files/EVSEwAdvanced_Power_supply.pdf
 
 
 = Parts List =
-|| Part || Source || Cost || Quantity || Link ||
+|| *Part* || *Source* || *Cost* || *Quantity* || *Link* ||
 || Open EVSE Plus Board w/ integrated power supply, LCD and RTC (Built) || Open EVSE || $210.00 || 1 || https://code.google.com/p/open-evse/wiki/Ordering||
 || J-1772 cable, 30 amps (A3435-PEV) || Leviton ||   $173.36 + FS || 1 || http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
 || 30A Relay || Digikey || $13.03 || 1 || http://search.digikey.com/us/en/products/T92P7D22-12/PB486-ND/365921 ||
@@ -43,11 +43,12 @@ A lot of people install their EVSE inside a standard NEMA box. I decided to try 
 
 http://rick.beebe.org/photo/EVSE/IMG_1896.JPG
 
-I ordered the box at the same time I ordered all the other parts. After I got it and was examining the backing plate I realized I didn't know what the predrilled holes were for. An email to DS and they sent me the link to a schematic: http://client.diversifiedstage.com/files/evse_indoor_assembly_drawing.pdf (I don't know why they don't put this inside the box when you buy it). It specifies specific relay, fuse holder and grounding bar. I lucked out with the relay I bought, but my fuse holders and ground bar are different. Fortunately it was easy to adapt the plate to what I bought but you may want to go right for the "correct" ones when you're ordering parts.
+I ordered the box at the same time I ordered all the other parts. After I got it and was examining the backing plate I realized I didn't know what the predrilled holes were for. An email to DS and they sent me the link to a schematic: http://client.diversifiedstage.com/files/evse_indoor_assembly_drawing.pdf (I don't know why they don't put this inside the box when you buy it). It specifies specific relay, fuse holder and grounding bar. I lucked out with the relay I bought, but my fuse holders and ground bar are different. Fortunately it was easy to adapt the plate to what I bought but you may want to go right for the "correct" ones when you're ordering parts:
 
-|| Fuse Holder || Bussman || P/N BM6032PQ ||
-|| Grounding Bus || Eaton || P/N GBK5 ||
-|| Relay || Potter & Brumfield || P/N TE92P7D22-12 ||
+|| *Part* || *Manufacturer* || *Part number* ||
+|| Fuse Holder || Bussman || BM6032PQ ||
+|| Grounding Bus || Eaton || GBK5 ||
+|| Relay || Potter & Brumfield || TE92P7D22-12 ||
 
 The Diversified Stage box can be hard to find. For example at the time of this writing it's not on their website but IS on their ebay store. So if the link I provided doesn't work, go to ebay and search for "diversifiedstage" (http://myworld.ebay.com/diversifiedstage?_trksid=p2047675.l2559)
 
