--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -43,7 +43,7 @@ A lot of people install their EVSE inside a standard NEMA box. I decided to try 
 
 http://rick.beebe.org/photo/EVSE/IMG_1896.JPG
 
-I ordered the box at the same time I ordered all the other parts. After I got it and was examining the backing plate I realized I didn't know what the predrilled holes were for. An email to DS and they sent me the link to a schematic: http://client.diversifiedstage.com/files/evse_indoor_assembly_drawing.pdf (I don't know why they don't put this inside the box when you buy it). It specifies specific relay, fuse holder and grounding bar. I lucked out with the relay I bought, but my fuse holders and ground bar are different. Fortunately it was easy to adapt the plate to what I bought but you may want to go right for the "correct" ones when you're ordering parts:
+I ordered the box at the same time I ordered all the other parts. After I got it and was examining the backing plate I realized I didn't know what the predrilled holes were for. An email to DS and they sent me the link to a schematic: https://code.google.com/p/open-evse/downloads/detail?name=evse_indoor_assembly_drawing.pdf&can=2&q= (original source:  http://client.diversifiedstage.com/files/evse_indoor_assembly_drawing.pdf) (I don't know why they don't put this inside the box when you buy it). It specifies specific relay, fuse holder and grounding bar. I lucked out with the relay I bought, but my fuse holders and ground bar are different. Fortunately it was easy to adapt the plate to what I bought but you may want to go right for the "correct" ones when you're ordering parts:
 
 || *Part* || *Manufacturer* || *Part number* ||
 || Fuse Holder || Bussman || BM6032PQ ||
