Edited wiki page EVSE_by_rbeebe through web user interface.

--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -111,3 +111,7 @@ http://rick.beebe.org/photo/EVSE/IMG_1914.JPG
 The C-Max gets its first taste of 240-volts.
 
 http://rick.beebe.org/photo/EVSE/IMG_1916.JPG
+
+Final installation: How it looks after clamping the power cable out of the way and installing a couple brackets to hold the charge cord.
+
+http://rick.beebe.org/photo/EVSE/IMG_1918.JPG
