Edited wiki page EVSE_by_rbeebe through web user interface.

--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -9,8 +9,8 @@ http://open-evse.googlecode.com/files/EVSEwAdvanced_Power_supply.pdf
 
 = Parts List =
 || *Part* || *Source* || *Cost* || *Quantity* || *Link* ||
-|| Open EVSE Plus Board w/ integrated power supply, LCD and RTC (Built) || Open EVSE || $210.00 || 1 || https://code.google.com/p/open-evse/wiki/Ordering||
-|| J-1772 cable, 30 amps (A3435-PEV) || Leviton ||   $173.36 + FS || 1 || http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
+|| Open EVSE Plus Board w/ integrated power supply, LCD and RTC (Built) || Open EVSE || $225.00 || 1 || https://code.google.com/p/open-evse/wiki/Ordering||
+|| J-1772 cable, 30 amps (A3435-PEV) || Leviton ||   $184.37 || 1 || http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
 || 30A Relay || Digikey || $13.03 || 1 || http://search.digikey.com/us/en/products/T92P7D22-12/PB486-ND/365921 ||
 || Current Transformer || Digikey || $10.65 || 1 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 ||
 || Halex 3/4 in. Strain Relief (2-Pack) || The Home Depot || $6.28 || 1 || http://www.homedepot.com/p/Halex-3-4-in-Strain-Relief-Cord-Connectors-with-Gland-Nut-2-Pack-21694/100126837#.UYEwSaKyD8I ||
