--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -17,21 +17,15 @@ http://open-evse.googlecode.com/files/EVSEwAdvanced_Power_supply.pdf
 || Fuse Block || Digikey || 1.13 || 2 || http://www.digikey.com/product-search/en/circuit-protection/fuseholders/655422?k=F1497-ND <br />* see note below ||
 || Fuse 30A || Digikey || 1.68 || 2 || http://www.digikey.com/product-detail/en/0326030.MXP/F1779-ND/778640 ||
 || Gland Nut || Digikey || 3.20 || 2 || http://www.digikey.com/product-detail/en/NG-9513/377-1923-ND/439541 ||
-
-
-|| Halex 3/4 in. Strain Relief (2-Pack) || The Home Depot || $6.28 || 1 || http://www.homedepot.com/p/Halex-3-4-in-Strain-Relief-Cord-Connectors-with-Gland-Nut-2-Pack-21694/100126837#.UYEwSaKyD8I ||
 || Leviton 30 Amp 2-Pole Single Outlet|| The Home Depot || $9.49 || 1 || http://www.homedepot.com/p/Leviton-30-Amp-2-Pole-Flush-Mount-Self-Grounding-Single-Outlet-Black-R60-05372-000/202077690#.UYEywaKyD8I ||
-|| Leviton 30A Right Angle Plug || The Home Depot || $14.75 || 1 || http://www.homedepot.com/p/Leviton-30-50-Amp-2-Pole-3-Way-Black-Grounded-Angle-Straight-Blade-Plug-R50-00931-000/202077682#.UYEzt6KyD8I ||
-|| Ground Bar Kit || The Home Depot || $4.67 || 1 || http://www.homedepot.com/p/Blackburn-Aluminum-Ground-Bar-Only-IBT3AB-B1-10/202786635#.UYEzaaKyD8I ||
-|| 1/2" Mounting screws and nuts || The Home Depot|| $1.18 || 1 || http://www.homedepot.com/p/8-32-x-1-2-in-Zinc-Plated-Round-Head-Combo-Drive-Machine-Screw-8-Pieces-27621/202706065#.UYE5CKKyD8I ||
-|| 1" Mounting screws and nuts || The Home Depot|| $1.18 || 1 || http://www.homedepot.com/p/8-32-x-1-in-Zinc-Plated-Round-Head-Combo-Drive-Machine-Screw-8-Pieces-27651/202706068?keyword=27651#.UYE486KyD8I ||
-|| 12-10 AWG Female Spade Piggyback || Ebay || $4.30 || 1 || http://www.ebay.com/itm/130877054917?ssPageName=STRK:MEWNX:IT&_trksid=p3984.m1439.l2649 ||
-|| 22-18 AWG Female Spade || Ebay || $4.20 || 1 || http://www.ebay.com/itm/140941993829?ssPageName=STRK:MEWNX:IT&_trksid=p3984.m1439.l2649 ||
-|| Illuminated Momentary Button || Ebay || $8.99 + $4.00 shipping || 1 || http://www.ebay.com/itm/130563267308?ssPageName=STRK:MEWAX:IT&_trksid=p3984.m1423.l2649||
-|| Shipping || Digikey || $5 || 1 || ||
+|| 30A Twist-Lock Plug || The Home Depot || $18.97 || 1 || http://www.homedepot.com/p/Pass-Seymour-30-Amp-125-Volt-Locking-Plug-L530PCCV3/100166915 ||
+|| Ground Bar Kit || The Home Depot || $4.48 || 1 || http://www.homedepot.com/p/Square-D-by-Schneider-Electric-4-Terminal-Ground-Bar-Kit-PK4GTACP/100207842?N=arcd <br />*see note below* ||
+|| 12-10 AWG Female Spade || The Home Depot || $2.99 || 1 || http://www.homedepot.com/p/Tyco-Electronics-Female-Disconnect-Fully-Insulated-Nylon-12-10-AWG-250-Series-10-Clam-CPGI-4-520448-2-10/202204296 ||
+|| 22-18 AWG Female Spade || The Home Depot || $2.99 || 1 || http://www.homedepot.com/p/Tyco-Electronics-Female-Disconnect-Fully-Insulated-Nylon-22-18-AWG-250-Series-10-Clam-CPGI-2-520264-2-10/202204294?keyword=22-18+female+disconnect ||
+|| Quick-Disconnect Adapter Set || Radio Shack || 2.49 || 2 || http://www.radioshack.com/product/index.jsp?productId=2103503&filterName=Cable+type&filterValue=Quick+disconnects ||
+|| Illuminated Momentary Button || Adafruit || $5.95 || 1 || http://www.adafruit.com/products/481||
 
-
-|| Total || || $531.18 ||
+|| Total || || $540.32 || (approximate. I haven't added in some tax and shipping) ||
 
 
 = Collect the parts =
