--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -16,6 +16,7 @@
     * [EVSE_LORDSn1per EVSE by Phillip Carlson]
     * [EVSE_by_4Dolio 30A portable EVSE by 4Dolio]
     * [EVSE_by_scutzi128 OpenEVSE 30A by Jacob Scutzlas]
+    * [EVSE_by_rbeebe OpenEVSE 30A by Rick Beebe]
   * *SAE J1772 Standard*
     * [J1772Basics Basics of J1772] 
     * [J1772CableSources Sources for J1772 cables]
