--- a/wiki/EVSE_by_rbeebe.wiki
+++ b/wiki/EVSE_by_rbeebe.wiki
@@ -79,8 +79,6 @@ http://rick.beebe.org/photo/EVSE/IMG_1903.JPG
 
 This is the wiring that can be done before putting the big cables in. It took a little playing around before I figured out this was the best orientation for the inner panel inside my box. There are two holes in the bottom of the enclosure. If you use the left one for the incoming power you probably want to rotate the backing plate 90 degrees clockwise. In my case it worked better to have the power cord on the right and this orientation worked better.
 
-Note the ground wire connected to the top left corner of the OpenEVSE board. It's on the _second_ screw from the left. The very left screw is for the J-1772 copilot wire. I point this out because there's a "GND" printed on the board right next to that copilot screw and it confused me as to which was which. The "GND" actually references the nearby header pin and not the screw terminal.
-
 http://rick.beebe.org/photo/EVSE/IMG_1905.JPG
 
 = Power cables =
@@ -93,7 +91,19 @@ Connectors crimped on the incoming power cable. I stripped about 12" from this c
 
 http://rick.beebe.org/photo/EVSE/IMG_1908.JPG
 
-Ideally you want to leave extra slack in the ground wires. If something should happen and the power cables get yanked out of the EVSE you'd like the copilot wire to unplug first, followed by the two hots and the ground last.
+Final wiring after the power cables are put in. Ideally you want to leave extra slack in the ground wires. If something should happen and the power cables get yanked out of the EVSE you'd like the copilot wire to unplug first, followed by the two hots and the ground last.
+
+http://rick.beebe.home/photo/EVSE/2013-05-21%2008.30.13.jpg
+
+The orange wire is the J1772 copilot wire. The green one next to it is the OpenEVSE ground. This is the proper order for those wires. I point this out because there's a "GND" printed on the board right next to that copilot screw and it confused me as to which was which. The "GND" actually references the nearby header pin and not the screw terminal.
+
+The small back and red wires with the white connector go to the current transformer (next photo). That connector was another hard-to-find item. The build instructions say to solder the wires but you know me and soldering. I ended up using an old CPU fan power connector. I tried several different ones. This one fit perfectly. It also helped that it had wires attached because my CT wires weren't long enough to reach.
+
+http://rick.beebe.home/photo/EVSE/2013-05-21%2008.30.37.jpg
+
+The black disk with the charge cables going through it is the current transformer which detects ground faults.
+
+http://rick.beebe.home/photo/EVSE/2013-05-21%2008.31.08.jpg
 
 = Mounting =
 
