Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -33,4 +33,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 6 || kris.stew || || || || || 
 || 7 || noelingle || Kit || LCD Kit || Paid || ||
 || 8 || b.otterson || Kit || RTC Kit EV Sim || Paid || ||
-|| 9 || polders || || || || ||
+|| 9 || polders - INT || kit || RTC kit - EV Sim || Paid || ||
