--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -34,3 +34,5 @@ Payment via paypal to chris1howell83@gmail.com
 || 7 || noelingle || Kit || LCD Kit || Paid || ||
 || 8 || b.otterson || Kit || RTC Kit EV Sim || Paid || ||
 || 9 || polders - INT || kit || RTC kit - EV Sim || Paid || ||
+|| 10 || jimdarnauer || Built || LCD Built - EV Sim || Paid || ||
+|| 11 || mictronics - INT || kit || RTC Built || Paid || ||
